Reducing textarea width for commenting, to avoid wrapping problems in Firefox

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -24,7 +24,7 @@ form.new_comment, form.edit_comment
     label
       font-weight: normal !important
     textarea
-      width: 594px
+      width: 590px
       margin-bottom: 0px
       font-size: 13px
       height: 1.4em
